--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -9,13 +9,11 @@ target_include_directories (application
         $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>)
 target_link_libraries (application
     PRIVATE
-        sqlite
-        json-c
-        zlibstatic
         rf)
 
 set_target_properties (application PROPERTIES
     VS_DEBUGGER_WORKING_DIRECTORY ${REFRAMED_BUILD_BINDIR}
+    MSVC_RUNTIME_LIBRARY MultiThreaded$<$<CONFIG:Debug>:Debug>
     RUNTIME_OUTPUT_DIRECTORY ${REFRAMED_BUILD_BINDIR}
     RUNTIME_OUTPUT_DIRECTORY_DEBUG ${REFRAMED_BUILD_BINDIR}
     RUNTIME_OUTPUT_DIRECTORY_RELEASE ${REFRAMED_BUILD_BINDIR}
