--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -1,6 +1,6 @@
 project (application
     LANGUAGES C
-    VERSION ${REFRAMED_VERSION})
+    VERSION ${VODHOUND_VERSION})
 
 add_executable (application
     "src/main.c")
@@ -9,12 +9,12 @@ target_include_directories (application
         $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>)
 target_link_libraries (application
     PRIVATE
-        rf)
+        vh)
 
 set_target_properties (application PROPERTIES
-    VS_DEBUGGER_WORKING_DIRECTORY ${REFRAMED_BUILD_BINDIR}
+    VS_DEBUGGER_WORKING_DIRECTORY ${VODHOUND_BUILD_BINDIR}
     MSVC_RUNTIME_LIBRARY MultiThreaded$<$<CONFIG:Debug>:Debug>
-    RUNTIME_OUTPUT_DIRECTORY ${REFRAMED_BUILD_BINDIR}
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${REFRAMED_BUILD_BINDIR}
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${REFRAMED_BUILD_BINDIR}
-    OUTPUT_NAME "ReFramed")
+    RUNTIME_OUTPUT_DIRECTORY ${VODHOUND_BUILD_BINDIR}
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${VODHOUND_BUILD_BINDIR}
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${VODHOUND_BUILD_BINDIR}
+    OUTPUT_NAME "VODHound")
