--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,17 +8,21 @@ message (STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 
 list (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/modules")
 
-project ("ReFramed2"
+project ("VODHound"
     LANGUAGES)
 
-set (REFRAMED_VERSION "0.0.1")
+set (VODHOUND_VERSION "0.0.1")
 
-set (REFRAMED_BUILD_BINDIR "${PROJECT_BINARY_DIR}/bin")
-set (REFRAMED_BUILD_LIBDIR "${REFRAMED_BUILD_BINDIR}/lib")
+set (VODHOUND_BUILD_BINDIR "${PROJECT_BINARY_DIR}/bin")
+set (VODHOUND_BUILD_LIBDIR "${VODHOUND_BUILD_BINDIR}/lib")
+set (VODHOUND_BUILD_CMAKEDIR "${VODHOUND_BUILD_BINDIR}/share/VODHound/cmake")
+set (VODHOUND_BUILD_PLUGINDIR "${VODHOUND_BUILD_BINDIR}/share/VODHound/plugins")
 
-set (REFRAMED_INSTALL_BINDIR ".")
-set (REFRAMED_INSTALL_LIBDIR "lib")
-set (REFRAMED_INSTALL_INCLUDEDIR "include")
+set (VODHOUND_INSTALL_BINDIR ".")
+set (VODHOUND_INSTALL_LIBDIR "lib")
+set (VODHOUND_INSTALL_INCLUDEDIR "include")
+set (VODHOUND_INSTALL_CMAKEDIR "share/VODHound/cmake")
+set (VODHOUND_INSTALL_PLUGINDIR "share/VODHound/plugins")
 
 # Need to compile static libraries with position independent code on because
 # rfcommon is a shared library
@@ -28,10 +32,36 @@ add_subdirectory ("thirdparty/sqlite-3.43.1")
 add_subdirectory ("thirdparty/json-c")
 add_subdirectory ("thirdparty/zlib-1.2.11")
 #add_subdirectory ("thirdparty/iup-cmake")
-add_subdirectory ("rf")
+add_subdirectory ("vh")
+add_subdirectory ("plugins")
 add_subdirectory ("application")
 
 # "application" target should be the startup project in VS
 set_property(
     DIRECTORY "${PROJECT_SOURCE_DIR}"
     PROPERTY VS_STARTUP_PROJECT application)
+
+# All subprojects have added targets to this export
+# group, so make sure to install it
+install (
+    EXPORT VODHoundTargets
+    NAMESPACE VODHound::
+    DESTINATION ${VODHOUND_INSTALL_CMAKEDIR})
+export (
+    EXPORT VODHoundTargets
+    NAMESPACE VODHound::
+    FILE ${VODHOUND_BUILD_CMAKEDIR}/VODHoundTargets.cmake)
+
+configure_file ("cmake/modules/TestVisibilityMacros.cmake" "${VODHOUND_BUILD_CMAKEDIR}/modules/TestVisibilityMacros.cmake" COPYONLY)
+
+install (
+    DIRECTORY "cmake/modules/"
+    DESTINATION ${VODHOUND_INSTALL_CMAKEDIR}/modules)
+
+include(CMakePackageConfigHelpers)
+configure_package_config_file("cmake/templates/VODHoundConfig.cmake.in"
+    "${VODHOUND_BUILD_CMAKEDIR}/VODHoundConfig.cmake"
+    INSTALL_DESTINATION "${VODHOUND_INSTALL_CMAKEDIR}")
+install(
+    FILES "${VODHOUND_BUILD_CMAKEDIR}/VODHoundConfig.cmake"
+    DESTINATION ${VODHOUND_INSTALL_CMAKEDIR})
