--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ set (ZLIB_PIC ON CACHE INTERNAL "")
 add_subdirectory ("thirdparty/sqlite-3.43.1")
 add_subdirectory ("thirdparty/json-c")
 add_subdirectory ("thirdparty/zlib-1.2.11")
-#add_subdirectory ("thirdparty/iup-cmake")
+add_subdirectory ("thirdparty/iup-cmake")
 add_subdirectory ("vh")
 add_subdirectory ("plugins")
 add_subdirectory ("application")
