--- a/plugins/video-ffmpeg/CMakeLists.txt
+++ b/plugins/video-ffmpeg/CMakeLists.txt
@@ -11,9 +11,6 @@ vodhound_add_plugin (${PROJECT_NAME}
     SOURCES
         "src/decoder.c"
         "src/plugin.c"
-        
-        "$<$<PLATFORM_ID:Windows>:src/win32/canvas_win32.c>"
-        "$<$<PLATFORM_ID:Windows>:src/win32/gfx_win32.c>"
     HEADERS
         "include/${PROJECT_NAME}/canvas.h"
         "include/${PROJECT_NAME}/decoder.h"
@@ -22,6 +19,32 @@ vodhound_add_plugin (${PROJECT_NAME}
         "include")
 
 if (VODHOUND_FFMPEG_VIDEO)
+    if (CMAKE_PLATFORM_ID MATCHES Windows)
+        set (DEFAULT_GFX "DX11")
+        set (POSSIBLE_GFX "DX11;WGL")
+    elseif (CMAKE_PLATFORM_ID MATCHES Linux)
+        set (DEFAULT_GFX "GLX")
+        set (POSSIBLE_GFX "GLX")
+    endif ()
+    message (FATAL_ERROR ".${DEFAULT_GFX}")
+    set (VODHOUND_FFMPEG_VIDEO_GFX ${DEFAULT_GFX} CACHE STRING "Which graphics API to use for rendering")
+    set_property (CACHE VODHOUND_FFMPEG_VIDEO_GFX PROPERTY STRINGS ${POSSIBLE_GFX})
+
+    if (VODHOUND_FFMPEG_VIDEO_GFX MATCHES "DX11")
+        target_sources (${PROJECT_NAME} PRIVATE
+            "src/canvas_win32_dx.c"
+            "src/gfx_dx11.c")
+        target_link_libraries (${PROJECT_NAME} PRIVATE d3d11)
+    elseif (VODHOUND_FFMPEG_VIDEO_GFX MATCHES "WGL")
+        target_sources (${PROJECT_NAME} PRIVATE
+            "src/canvas_win32_gl.c"
+            "src/gfx_gl.c")
+    elseif (VODHOUND_FFMPEG_VIDEO_GFX MATCHES "GLX")
+        target_sources (${PROJECT_NAME} PRIVATE
+            "src/canvas_glx.c"
+            "src/gfx_gl.c")
+    endif ()
+
     find_package (FFMPEG COMPONENTS avcodec avformat avutil avdevice swscale swresample REQUIRED)
     target_link_libraries (${PROJECT_NAME}
         PRIVATE FFMPEG::avutil
@@ -30,10 +53,6 @@ if (VODHOUND_FFMPEG_VIDEO)
         PRIVATE FFMPEG::avdevice
         PRIVATE FFMPEG::swresample
         PRIVATE FFMPEG::swscale)
-
-    if (WIN32)
-        target_link_libraries (${PROJECT_NAME} PRIVATE d3d11 d3dx11)
-    endif ()
 
     # On Windows we have to copy the DLLs to our binary directory
     if (WIN32 OR CYGWIN)
