--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,11 +28,19 @@ set (VODHOUND_INSTALL_PLUGINDIR "share/VODHound/plugins")
 # rfcommon is a shared library
 set (ZLIB_PIC ON CACHE INTERNAL "")
 
+# Configure IUP
+set (IUP_BUILD_BINDIR ${VODHOUND_BUILD_BINDIR} CACHE INTERNAL "")
+set (IUP_INSTALL_BINDIR ${VODHOUND_INSTALL_BINDIR} CACHE INTERNAL "")
+set (IUP_INSTALL_LIBDIR ${VODHOUND_INSTALL_LIBDIR} CACHE INTERNAL "")
+set (IUP_INSTALL_INCLUDEDIR ${VODHOUND_INSTALL_INCLUDEDIR} CACHE INTERNAL "")
+set (IUP_EXAMPLES OFF CACHE INTERNAL "")
+
 add_subdirectory ("thirdparty/sqlite-3.43.1")
 add_subdirectory ("thirdparty/json-c")
 add_subdirectory ("thirdparty/zlib-1.2.11")
 add_subdirectory ("thirdparty/iup-cmake")
 add_subdirectory ("vh")
+add_subdirectory ("iup3d")
 add_subdirectory ("application")
 add_subdirectory ("plugins")
 
