--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -10,8 +10,9 @@ target_include_directories (application
 target_link_libraries (application
     PRIVATE
         vh
-        iup
-        iupimglib)
+        IUP::iup
+        IUP::3d
+        IUP::imglib)
 
 set_target_properties (application PROPERTIES
     VS_DEBUGGER_WORKING_DIRECTORY ${VODHOUND_BUILD_BINDIR}
