Fixing release build on windows

--- a/iupgfx/CMakeLists.txt
+++ b/iupgfx/CMakeLists.txt
@@ -72,3 +72,14 @@ if (CMAKE_SYSTEM_NAME MATCHES "Windows" AND IUP_LIB_TYPE MATCHES "SHARED")
 endif ()
 
 add_library (IUP::gfx ALIAS iupgfx)
+
+install (
+    TARGETS iupgfx
+    EXPORT IUPTargets
+    INCLUDES DESTINATION ${VODHOUND_INSTALL_INCLUDEDIR}
+    ARCHIVE DESTINATION ${VODHOUND_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${VODHOUND_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${VODHOUND_INSTALL_BINDIR})
+install (
+    DIRECTORY "include"
+    DESTINATION ${VODHOUND_INSTALL_INCLUDEDIR})
