--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -23,3 +23,7 @@ set_target_properties (application PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY_DEBUG ${VODHOUND_BUILD_BINDIR}
     RUNTIME_OUTPUT_DIRECTORY_RELEASE ${VODHOUND_BUILD_BINDIR}
     OUTPUT_NAME "VODHound")
+
+install (
+    TARGETS application
+    DESTINATION ${VODHOUND_INSTALL_BINDIR})
