VOD review plugin separate

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -7,5 +7,6 @@ install (
     FILES "cmake/modules/VODHoundPlugin.cmake"
     DESTINATION "${VODHOUND_BUILD_CMAKEDIR}/modules")
 
-message (STATUS "adding ffmpeg-video")
 add_subdirectory ("video-ffmpeg")
+add_subdirectory ("vod-review")
+
