Populate tree using data from db. Fixing bugs

--- a/vh/templates/config.h.in
+++ b/vh/templates/config.h.in
@@ -10,6 +10,7 @@
 #cmakedefine VH_VEC_64BIT_CAPACITY
 
 #define VH_${VH_LIB_TYPE}
+#define VH_SIZEOF_VOID_P          ${CMAKE_SIZEOF_VOID_P}
 #define VH_BTREE_EXPAND_FACTOR    ${VH_BTREE_EXPAND_FACTOR}
 #define VH_BTREE_MIN_CAPACITY     ${VH_BTREE_MIN_CAPACITY}
 #define VH_HM_EXPAND_FACTOR       ${VH_HM_EXPAND_FACTOR}
