--- a/plugins/search/CMakeLists.txt
+++ b/plugins/search/CMakeLists.txt
@@ -9,19 +9,24 @@ vodhound_add_plugin (${PROJECT_NAME}
     SOURCES
         "src/ast.c"
         "src/nfa.c"
+        "src/parser.c"
         "src/plugin_search.c"
         "src/parser.y"
         "src/scanner.lex"
     HEADERS
         "include/${PROJECT_NAME}/ast.h"
+        "include/${PROJECT_NAME}/nfa.h"
+        "include/${PROJECT_NAME}/parser.h"
     INCLUDES
         "include"
+        "${PROJECT_BINARY_DIR}/include"
     LIBS
         VODHound::vh
         IUP::iup)
 
-if (VODHOUND_SEARCH)
-    option (${PROJECT_NAME}_COUNTER_EXAMPLES "Have BISON generate counter examples" OFF)
+if (VODHOUND_${PLUGIN_NAME})
+    option (${PLUGIN_NAME}_COUNTER_EXAMPLES "Have BISON generate counter examples" OFF)
+    option (${PLUGIN_NAME}_CLI "Build standalone command line interface for testing" OFF)
 
     ###########################################################################
     # Parsers
@@ -34,23 +39,23 @@ if (VODHOUND_SEARCH)
     file (MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/src")
     file (MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/include/${PROJECT_NAME}")
 
-    if (${PROJECT_NAME}_COUNTER_EXAMPLES)
+    if (${PLUGIN_NAME}_COUNTER_EXAMPLES)
         set (BISON_COMPILE_FLAGS -Wcounterexamples)
     endif ()
 
-    bison_target (${PROJECT_NAME}-query-parser
+    bison_target (${PROJECT_NAME}-parser
         "${PROJECT_SOURCE_DIR}/src/parser.y"
         "${PROJECT_BINARY_DIR}/src/parser.y.c"
         DEFINES_FILE "${PROJECT_BINARY_DIR}/include/${PROJECT_NAME}/parser.y.h"
         COMPILE_FLAGS ${BISON_COMPILE_FLAGS})
-    flex_target (${PROJECT_NAME}-query-scanner
+    flex_target (${PROJECT_NAME}-scanner
         "${PROJECT_SOURCE_DIR}/src/scanner.lex"
         "${PROJECT_BINARY_DIR}/src/scanner.lex.c"
         DEFINES_FILE "${PROJECT_BINARY_DIR}/include/${PROJECT_NAME}/scanner.lex.h")
-    add_flex_bison_dependency (${PROJECT_NAME}-query-scanner ${PROJECT_NAME}-query-parser)
+    add_flex_bison_dependency (${PROJECT_NAME}-scanner ${PROJECT_NAME}-parser)
 
     if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-        set_source_files_properties (${FLEX_${PROJECT_NAME}-query-scanner_OUTPUTS} PROPERTIES
+        set_source_files_properties (${FLEX_${PROJECT_NAME}-scanner_OUTPUTS} PROPERTIES
             COMPILE_FLAGS "/wd4005")
     endif ()
 
@@ -58,8 +63,8 @@ if (VODHOUND_SEARCH)
 
     target_sources (${PROJECT_NAME}
         PRIVATE
-            ${BISON_${PROJECT_NAME}-query-scanner_OUTPUTS}
-            ${FLEX_${PROJECT_NAME}-query-scanner_OUTPUTS})
+            ${BISON_${PROJECT_NAME}-parser_OUTPUTS}
+            ${FLEX_${PROJECT_NAME}-scanner_OUTPUTS})
     target_include_directories (${PROJECT_NAME}
         PRIVATE
             $<BUILD_INTERFACE:$<$<AND:$<PLATFORM_ID:Windows>,$<NOT:$<BOOL:${HAVE_UNISTD_H}>>>:${PROJECT_SOURCE_DIR}/include/win32_unistd>>)
@@ -73,4 +78,40 @@ if (VODHOUND_SEARCH)
     #add_subdirectory ("thirdparty/ogdf.v2022.02")
     #target_link_libraries (${PROJECT_NAME}
     #    PRIVATE OGDF)
+
+    ###########################################################################
+    # CLI
+    ###########################################################################
+
+    if (${PLUGIN_NAME}_CLI)
+        add_executable (${PROJECT_NAME}_cli
+            "src/ast.c"
+            "src/nfa.c"
+            "src/parser.c"
+            "src/parser.y"
+            "src/scanner.lex"
+
+            "include/${PROJECT_NAME}/ast.h"
+            "include/${PROJECT_NAME}/nfa.h"
+            "include/${PROJECT_NAME}/parser.h"
+
+            ${BISON_${PROJECT_NAME}-parser_OUTPUTS}
+            ${FLEX_${PROJECT_NAME}-scanner_OUTPUTS}
+
+            "src/cli.c")
+        target_include_directories (${PROJECT_NAME}_cli
+            PRIVATE
+                "include"
+                "${PROJECT_BINARY_DIR}/include"
+                $<BUILD_INTERFACE:$<$<AND:$<PLATFORM_ID:Windows>,$<NOT:$<BOOL:${HAVE_UNISTD_H}>>>:${PROJECT_SOURCE_DIR}/include/win32_unistd>>)
+        target_link_libraries (${PROJECT_NAME}_cli
+            PRIVATE
+                ${PROJECT_NAME}
+                VODHound::vh)
+        set_target_properties (${PROJECT_NAME}_cli
+            PROPERTIES
+                RUNTIME_OUTPUT_DIRECTORY ${VODHOUND_BUILD_BINDIR}
+                RUNTIME_OUTPUT_DIRECTORY_DEBUG ${VODHOUND_BUILD_BINDIR}
+                RUNTIME_OUTPUT_DIRECTORY_RELEASE ${VODHOUND_BUILD_BINDIR})
+    endif ()
 endif ()
