Adding hash40() function to vh

--- a/vh/CMakeLists.txt
+++ b/vh/CMakeLists.txt
@@ -69,10 +69,12 @@ add_library (vh ${VH_LIB_TYPE}
     "include/vh/backtrace.h"
     "include/vh/btree.h"
     "include/vh/cli_colors.h"
+    "include/vh/crc32.h"
     "include/vh/db_ops.h"
     "include/vh/dynlib.h"
     "include/vh/fs.h"
     "include/vh/hash.h"
+    "include/vh/hash40.h"
     "include/vh/hm.h"
     "include/vh/import.h"
     "include/vh/init.h"
@@ -89,9 +91,11 @@ add_library (vh ${VH_LIB_TYPE}
     "include/vh/vec.h"
 
     "src/btree.c"
+    "src/crc32.c"
     "src/db_ops.c"
     "src/fs_common.c"
     "src/hash.c"
+    "src/hash40.c"
     "src/hm.c"
     "src/init.c"
     "src/log.c"
