Working on repetition node

--- a/plugins/search/CMakeLists.txt
+++ b/plugins/search/CMakeLists.txt
@@ -110,6 +110,8 @@ if (VODHOUND_${PLUGIN_NAME})
                 VODHound::vh)
         set_target_properties (${PROJECT_NAME}_cli
             PROPERTIES
+                VS_DEBUGGER_WORKING_DIRECTORY ${VODHOUND_BUILD_BINDIR}
+                MSVC_RUNTIME_LIBRARY MultiThreaded$<$<CONFIG:Debug>:Debug>
                 RUNTIME_OUTPUT_DIRECTORY ${VODHOUND_BUILD_BINDIR}
                 RUNTIME_OUTPUT_DIRECTORY_DEBUG ${VODHOUND_BUILD_BINDIR}
                 RUNTIME_OUTPUT_DIRECTORY_RELEASE ${VODHOUND_BUILD_BINDIR})
