Fixing bugs, finished implementing repetitions

--- a/plugins/search/CMakeLists.txt
+++ b/plugins/search/CMakeLists.txt
@@ -88,12 +88,14 @@ if (VODHOUND_${PLUGIN_NAME})
     if (${PLUGIN_NAME}_CLI)
         add_executable (${PROJECT_NAME}_cli
             "src/ast.c"
+            "src/match.c"
             "src/nfa.c"
             "src/parser.c"
             "src/parser.y"
             "src/scanner.lex"
 
             "include/${PROJECT_NAME}/ast.h"
+            "include/${PROJECT_NAME}/match.h"
             "include/${PROJECT_NAME}/nfa.h"
             "include/${PROJECT_NAME}/parser.h"
 
