State transition table of NFA

--- a/plugins/search/CMakeLists.txt
+++ b/plugins/search/CMakeLists.txt
@@ -17,6 +17,7 @@ vodhound_add_plugin (${PROJECT_NAME}
     HEADERS
         "include/${PROJECT_NAME}/ast.h"
         "include/${PROJECT_NAME}/dfa.h"
+        "include/${PROJECT_NAME}/match.h"
         "include/${PROJECT_NAME}/nfa.h"
         "include/${PROJECT_NAME}/parser.h"
     INCLUDES
